--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -2749,3 +2749,24 @@ summary { display: list-item !important; }
     width: 100%;
     font-size: 10px;
 }
+
+
+.send-to-planexp-btn-img {
+    width: 40px;
+}
+
+
+#send-to-planexp-dialog {
+    display: none;
+    margin-left: calc((75% - 700px)/2);
+    padding: 25px;
+    margin-top: 250px;
+    width: 700px;
+    height: 300px;
+    z-index: 1000000000;
+    position: fixed;
+    background-color: white;
+    border-color: #D4D4D4;
+    border-style: solid;
+    border-width: 2px;
+}
