--- a/NetExplorer/templates/NetExplorer/netexplorer.html
+++ b/NetExplorer/templates/NetExplorer/netexplorer.html
@@ -127,6 +127,9 @@
                     <input type="hidden" id="graph-to-send" name="graph-to-send"></input>
             </form>
 
+            
+                <span id="send-to-planexp-error1" class="text-danger">Select Experiment and Dataset</span>
+                <span id="send-to-planexp-error2" class="text-danger">No network to send</span>
             <br><br>
             <button id="send-to-planexp-cancel" class="btn btn-default">Cancel</button>
             <button id="send-to-planexp-submit" class="btn btn-danger">Send</button>
